fix: period stepper buttons alignment (#1881)

--- a/src/components/periods/styles/PeriodSelect.module.css
+++ b/src/components/periods/styles/PeriodSelect.module.css
@@ -5,16 +5,19 @@
 
 .select {
     width: calc(100% - 80px);
-    height: 37px;
 }
 
 .stepper {
-    margin: 0 0 6px 4px;
+    margin: 0 0 7px var(--spacers-dp4);
     white-space: nowrap;
 }
 
 .stepper > span {
     display: inline-block;
+}
+
+.stepper span button {
+    height: 35px;
 }
 
 .stepper > span:first-child {
